--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Caesar Cipher</title>
         <link rel="stylesheet" href="index.css">
     </head>
 
