--- a/pages/SDP/U5_Lab1_SDP.html
+++ b/pages/SDP/U5_Lab1_SDP.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+    <title>SDP</title>
+</head>
 <body>
     <p>1. I will be implementing the caesar cipher </p>
     <p>2. The caesar cipher takes the letters of a message and shifts them by a certain amount to different letters.</p>
